[gd_scene load_steps=16 format=3 uid="uid://bdti1m5ug512v"]

[ext_resource type="Script" path="res://ScenesANDScripts/ForLevels/Items/Coins/Gold/GoldCoin.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c0ioaex6tuoix" path="res://AllTextures/ForLevels/Items/Coins/Gold/GoldCoin001.png" id="2"]
[ext_resource type="Texture2D" uid="uid://cou6yug2evc8w" path="res://AllTextures/ForLevels/Items/Coins/Gold/GoldCoin009.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dr7t4lqhse2gm" path="res://AllTextures/ForLevels/Items/Coins/Gold/GoldCoin010.png" id="4"]
[ext_resource type="Texture2D" uid="uid://c0ep3gn4r07vg" path="res://AllTextures/ForLevels/Items/Coins/Gold/GoldCoin002.png" id="5"]
[ext_resource type="Texture2D" uid="uid://b1tqybtjp14su" path="res://AllTextures/ForLevels/Items/Coins/Gold/GoldCoin008.png" id="6"]
[ext_resource type="Texture2D" uid="uid://dbee6bguiwwpq" path="res://AllTextures/ForLevels/Items/Coins/Gold/GoldCoin004.png" id="7"]
[ext_resource type="Texture2D" uid="uid://dlw0dh2gv1pea" path="res://AllTextures/ForLevels/Items/Coins/Gold/GoldCoin006.png" id="8"]
[ext_resource type="Texture2D" uid="uid://csyq4s6n3qssk" path="res://AllTextures/ForLevels/Items/Coins/Gold/GoldCoin007.png" id="9"]
[ext_resource type="Texture2D" uid="uid://c325dgxn16533" path="res://AllTextures/ForLevels/Items/Coins/Gold/GoldCoin003.png" id="10"]
[ext_resource type="Texture2D" uid="uid://qsma6swx8g2g" path="res://AllTextures/ForLevels/Items/Coins/Gold/GoldCoin011.png" id="11"]
[ext_resource type="Texture2D" uid="uid://b63xfhg2161e2" path="res://AllTextures/ForLevels/Items/Coins/Gold/GoldCoin005.png" id="12"]
[ext_resource type="AudioStream" uid="uid://50kxq2r21tmr" path="res://MusicANDSounds/Sounds/Objects/GoldCoin.mp3" id="13_me7vq"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}, {
"duration": 1.0,
"texture": ExtResource("5")
}, {
"duration": 1.0,
"texture": ExtResource("10")
}, {
"duration": 1.0,
"texture": ExtResource("7")
}, {
"duration": 1.0,
"texture": ExtResource("12")
}, {
"duration": 1.0,
"texture": ExtResource("8")
}, {
"duration": 1.0,
"texture": ExtResource("9")
}, {
"duration": 1.0,
"texture": ExtResource("6")
}, {
"duration": 1.0,
"texture": ExtResource("3")
}, {
"duration": 1.0,
"texture": ExtResource("4")
}, {
"duration": 1.0,
"texture": ExtResource("11")
}],
"loop": true,
"name": &"GoldCoin",
"speed": 20.0
}]

[sub_resource type="CircleShape2D" id="2"]
radius = 20.025

[node name="GoldCoin" type="Node2D"]
position = Vector2(87, 66)
script = ExtResource("1")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("1")
animation = &"GoldCoin"

[node name="AreaPickUP" type="Area2D" parent="."]

[node name="CollisionPickUP" type="CollisionShape2D" parent="AreaPickUP"]
position = Vector2(-1, -1)
shape = SubResource("2")

[node name="PickUP" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_me7vq")

[node name="VisibleOnScreenEnabler" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(-1, -0.999999)
scale = Vector2(2, 2)

[connection signal="body_entered" from="AreaPickUP" to="." method="_on_area_pick_up_body_entered"]
[connection signal="finished" from="PickUP" to="." method="_on_pick_up_finished"]
[connection signal="screen_entered" from="VisibleOnScreenEnabler" to="." method="_on_visible_on_screen_enabler_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler" to="." method="_on_visible_on_screen_enabler_screen_exited"]
